--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <link rel="shortcut icon" href="assets/images/favicon.svg" type="image/x-icon" />
         <script src="assets/js/script.js" defer></script>
         <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Candal&family=Lexend:wght@100..900&display=swap" rel="stylesheet">
         <title>Gator Soup</title>
     </head>
     <header><h1>prepare and serve.</h1></header>
