Fix minor spelling mistake

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <header><h1>prepare and serve.</h1></header>
     <body>
         <canvas height="700" width="700"></canvas>
-        <h3>Welcome to Gator Soup, a math game! Answer all the equations correctly before <br> the timer ends to not convert your neighbourg's alligator into soup! <br>KEEP THE TEMPERATURE 50</h3>
+        <h3>Welcome to Gator Soup, a math game! Answer all the equations correctly before <br> the timer ends to not convert your neighbour's alligator into soup! <br>KEEP THE TEMPERATURE 50</h3>
         <p>André A-J, animation et interaction en jeu (TIM) Collège de Maisonneuve</p>
 
     </body>
+
 </html>
